--- a/mspr/addClient.html
+++ b/mspr/addClient.html
@@ -5,12 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Ajout clients</title>
+
+    <title>Brakaas</title>
 </head>
 
 <body>
-    <h1>Ajout client</h1>
+    <div class="title">
+        <a href="./index.html"><img src="img/logo.jpg"></a>
+        <h1>Les Brakaas !</h1>
+    </div>
+
+    <p>Ajout d'un client :</p>
     <a href="./index.html"><input type="button" value="Accueil"></a>
 </body>
 
