--- a/mspr/index.html
+++ b/mspr/index.html
@@ -6,22 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/x-icon" href="img/logoFav.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
     <link rel="stylesheet" href="style.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
-    <img src="img/logo.jpg">
-    <h1>Les Brakaas !</h1>
+    <div class="title">
+        <a href="./index.html"><img src="img/logo.jpg"></a>
+        <h1>Les Brakaas !</h1>
+    </div>
     <p>Que souhaitez-vous faire ?</p>
 
     <nav>
-        <a href="./listingProduct.html"><input class="button" type="button" value="Gerer les produits"></a>
-        <a href="./addClient.html"><input class="button" type="button" value="Gerer les client"></a>
-        <a href="./createCommande.html"><input class="button" type="button" value="Créer une commande"></a>
-        <a href="./stats.html"><input class="button" type="button" value="Afficher les statistiques"></a>
+        <a href="./listingProduct.html "><input class="pouet" type="button " value="Gerer les produits "></a>
+        <a href="./addClient.html "><input class="pouet" type="button " value="Gerer les client "></a>
+        <a href="./createCommande.html "><input class="pouet" type="button " value="Créer une commande "></a>
+        <a href="./stats.html "><input class="pouet" type="button " value="Afficher les statistiques "></a>
     </nav>
 </body>
 
