--- a/mspr/delogConfirmation.html
+++ b/mspr/delogConfirmation.html
@@ -13,19 +13,22 @@
 
     <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/delogConfirmation.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
-    <div class="title">
-        <a href="./index.html"><img class="img" src="img/logo.jpg"></a>
+    <div class=" title ">
+        <a href="./index.html "><img class="img " src="img/logo.jpg "></a>
         <h1>Les Brakaas !</h1>
+
     </div>
-
-    <p>Les stats :</p>
-    <a href="./index.html"><input type="button" value="Accueil"></a>
-
+    <div class="confDelog ">
+        <h2>Vous êtes bien déconnecté !</h2>
+        <div class="bravo"><img src="./img/bravo.gif "></div>
+        <a href="./login.html "><input class="backPouet " type="button " value="Retour Login "></a>
+    </div>
 </body>
 
 </html>
