--- a/mspr/addClient.html
+++ b/mspr/addClient.html
@@ -12,19 +12,45 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/createCommand.css">
+    <link rel="stylesheet" href="./css/delogConfirmation.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
     <div class="title">
-        <a href="./index.html"><img src="img/logo.jpg"></a>
+        <a href="./index.html"><img class="img" src="img/logo.jpg"></a>
+        <a href="./delogConfirmation.html"><input class="delog" type="button" value="Deconnexion"></a>
         <h1>Les Brakaas !</h1>
     </div>
 
-    <p>Ajout d'un client :</p>
-    <a href="./index.html"><input type="button" value="Accueil"></a>
+    <p>Création d'un client :</p>
+
+    <div class="formCommand">
+        <form>
+            <label>Nom du client :</label>
+            <input class="input" type="text" class="clientName" placeholder="Nom du client">
+            <br><br>
+            <label>Nom de l'entreprise :</label>
+            <input class="input" type="text" class="productChoosen" placeholder="Entreprise">
+            <br><br>
+            <label>Adresse postale :</label>
+            <input class="input" type="text" class="quantity" placeholder="Adresse postale">
+            <br><br>
+            <label>Adresse Mail :</label>
+            <input class="input" type="email" class="price" placeholder="Mail">
+            <br><br>
+            <label>Numéro de téléphone :</label>
+            <input class="input" type="text" class="price" placeholder="Tel">
+            <br><br>
+            <a href="clientComfirmation.html"><input class="sendCommand" type="button" class="authLog" value="Valider !"></a>
+        </form>
+    </div>
+
+    <!--<a href="./index.html"><input type="button" value="Accueil"></a>-->
+
 </body>
 
 </html>
