--- a/mspr/createCommande.html
+++ b/mspr/createCommande.html
@@ -12,19 +12,41 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/createCommand.css">
+    <link rel="stylesheet" href="./css/delogConfirmation.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
     <div class="title">
-        <a href="./index.html"><img src="img/logo.jpg"></a>
+        <a href="./index.html"><img class="img" src="img/logo.jpg"></a>
+        <a href="./delogConfirmation.html"><input class="delog" type="button" value="Deconnexion"></a>
         <h1>Les Brakaas !</h1>
     </div>
 
     <p>Création d'une commande :</p>
-    <a href="./index.html"><input type="button" value="Accueil"></a>
+
+    <div class="formCommand">
+        <form>
+            <label>Nom du client :</label>
+            <input class="input" type="text" class="clientName" placeholder="Nom du client">
+            <br><br>
+            <label>Produits choisi :</label>
+            <input class="input" type="text" class="productChoosen" placeholder="Produits choisi">
+            <br><br>
+            <label>Indiquez la quantité :</label>
+            <input class="input" type="text" class="quantity" placeholder="Quantité">
+            <br><br>
+            <label>Indiquez le prix :</label>
+            <input class="input" type="text" class="price" placeholder="Prix">
+            <br><br>
+            <a href="commandConfirmation.html"><input class="sendCommand" type="button" class="authLog" value="Valider la commande !"></a>
+        </form>
+    </div>
+
+    <!--<a href="./index.html"><input type="button" value="Accueil"></a>-->
 
 </body>
 
