--- a/mspr/listingProduct.html
+++ b/mspr/listingProduct.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
     <div class="title">
-        <a href="./index.html"><img src="img/logo.jpg"></a>
+        <a href="./index.html"><img class="img" src="img/logo.jpg"></a>
         <h1>Les Brakaas !</h1>
     </div>
 
