--- a/mspr/login.html
+++ b/mspr/login.html
@@ -13,6 +13,7 @@
 
     <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/login.css">
 
     <title>Brakaas</title>
 </head>
@@ -22,10 +23,17 @@
         <a href="./index.html"><img class="img" src="img/logo.jpg"></a>
         <h1>Les Brakaas !</h1>
     </div>
-
-    <p>Les stats :</p>
-    <a href="./index.html"><input type="button" value="Accueil"></a>
-
+    <div class="login">
+        <form id="login" method="get" action="login.php">
+            <label>User Name</label>
+            <input type="text" class="userName" placeholder="Username">
+            <br><br>
+            <label>Password</label>
+            <input type="Password" class="pass" placeholder="Password">
+            <br><br>
+            <a href="index.html"><input type="button" class="authLog" value="Log In Here"></a>
+        </form>
+    </div>
 </body>
 
 </html>
