Ajout de pages et optimisation/nettoyage du code

--- a/mspr/addProduct.html
+++ b/mspr/addProduct.html
@@ -32,25 +32,21 @@
 
     <div class="formCommand">
         <form>
-            <label>Nom du client :</label>
-            <input class="input" type="text" class="clientName" placeholder="Nom du client">
+            <label>Nom du produit :</label>
+            <input class="input" type="text" placeholder="Produit">
             <br><br>
-            <label>Nom de l'entreprise :</label>
-            <input class="input" type="text" class="productChoosen" placeholder="Entreprise">
+            <label>Disponibilité :</label>
+            <input class="input" type="text" placeholder="Disponibilité">
             <br><br>
-            <label>Adresse postale :</label>
-            <input class="input" type="text" class="quantity" placeholder="Adresse postale">
+            <label>Stock :</label>
+            <input class="input" type="number" placeholder="Stock">
             <br><br>
-            <label>Adresse Mail :</label>
-            <input class="input" type="email" class="price" placeholder="Mail">
+            <label>Prix Unitaitre :</label>
+            <input class="input" type="number" placeholder="P.U">
             <br><br>
-            <label>Numéro de téléphone :</label>
-            <input class="input" type="text" class="price" placeholder="Tel">
-            <br><br>
-            <a href="./confirmation/clientConf.html"><input class="sendCommand" type="button" value="Valider !"></a>
+            <a href="./confirmation/productConf.html"><input class="sendCommand" type="button" value="Valider !"></a>
         </form>
     </div>
-
 </body>
 
 </html>
