--- a/mspr/displayClient.html
+++ b/mspr/displayClient.html
@@ -26,61 +26,48 @@
         <a href="./index.html"><input class="delog" type="button" value="Retour accueil"></a>
         <h1>Les Brakaas !</h1>
     </header>
-
-    <p>Création de commande :</p>
+    <p>Liste des clients :</p>
 
     <div class="tabContainer">
         <table class="tabDesign">
             <thead>
                 <tr>
-                    <th>Choix</th>
-                    <th>Nom</th>
-                    <th>Disponibilité</th>
-                    <th>Stock</th>
-                    <th>Prix Unitaire</th>
-                    <th>Quantité</th>
+                    <th>ID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td><input type="checkbox"></td>
-                    <td>Vin Pinot Noir</td>
-                    <td>OK</td>
-                    <td>127</td>
-                    <td>45 €</td>
-                    <td><input class="quantitieChoice" type="number"></td>
+                    <td>01</td>
+                    <td>Jean</td>
+                    <td>Bernard</td>
+                    <td>Afficher | Modifier</td>
                 </tr>
 
                 <tr>
-                    <td><input type="checkbox"></td>
-                    <td>Weed</td>
-                    <td>OK</td>
-                    <td>235</td>
-                    <td>67 €</td>
-                    <td><input class="quantitieChoice" type="number"></td>
+                    <td>02</td>
+                    <td>Claude</td>
+                    <td>Bertrand</td>
+                    <td>Afficher | Modifier</td>
                 </tr>
 
                 <tr>
-                    <td><input type="checkbox"></td>
-                    <td>Whiskey Jameson</td>
-                    <td>NONE</td>
-                    <td>0</td>
-                    <td>56 €</td>
-                    <td><input class="quantitieChoice" type="number"></td>
+                    <td>03</td>
+                    <td>Soizig</td>
+                    <td>Claudette</td>
+                    <td>Afficher | Modifier</td>
                 </tr>
 
                 <tr>
-                    <td><input type="checkbox"></td>
+                    <td>04</td>
                     <td>Prout</td>
-                    <td>OK</td>
-                    <td>1234567</td>
-                    <td>0.01 €</td>
-                    <td><input class="quantitieChoice" type="number"></td>
+                    <td>Pouet</td>
+                    <td>Afficher | Modifier</td>
                 </tr>
             </tbody>
         </table>
-        <a href="./confirmation/commandConf.html"><input class="authLog" type="button" value="Créer la commande !"></a>
+        <a href="./addClient.html"><input class="authLog" type="button" value="Ajouter un client !"></a>
     </div>
 </body>
-
-</html>
