--- a/mspr/login.html
+++ b/mspr/login.html
@@ -11,18 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
+    <link rel="icon" type="image/x-icon" href="./img/logoFav.ico">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/button.css">
     <link rel="stylesheet" href="./css/login.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
-    <div class="title">
-        <a href="./index.html"><img class="img" src="img/logo.jpg"></a>
+    <header>
+        <a href="./index.html"><img class="img" src="./img/logo.jpg"></a>
         <h1>Les Brakaas !</h1>
-    </div>
+    </header>
     <div class="login">
         <form id="login" method="get" action="login.php">
             <label>User Name</label>
@@ -31,7 +32,7 @@
             <label>Password</label>
             <input type="Password" class="pass" placeholder="Password">
             <br><br>
-            <a href="index.html"><input type="button" class="authLog" value="Log In Here"></a>
+            <a href="./index.html"><input type="button" class="authLog" value="Log In Here"></a>
         </form>
     </div>
 </body>
