--- a/mspr/confirmation/productConf.html
+++ b/mspr/confirmation/productConf.html
@@ -11,23 +11,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="./img/logoFav.ico">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/button.css">
+    <link rel="icon" type="image/x-icon" href="./../img/logoFav.ico">
+    <link rel="stylesheet" href="./../css/style.css">
+    <link rel="stylesheet" href="./../css/confirmation.css">
+    <link rel="stylesheet" href="./../css/button.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
-    <header>
-        <a href="./index.html"><img class="img" src="./img/logo.jpg"></a>
-        <a href="./confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
-        <a href="./index.html"><input class="delog" type="button" value="Retour accueil"></a>
+    <div class=" title ">
+        <a href="./../index.html "><img class="img " src="./../img/logo.jpg "></a>
+        <a href="./../index.html"><input class="delog" type="button" value="Retour accueil"></a>
         <h1>Les Brakaas !</h1>
-    </header>
 
-    <p>Les stats :</p>
-
+    </div>
+    <div class="confDelog ">
+        <h2>Le produit est bien ajouté !</h2>
+        <div class="bravo"><img src="./../img/bravo.gif "></div>
+    </div>
 </body>
 
 </html>
