--- a/mspr/index.html
+++ b/mspr/index.html
@@ -11,23 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="img/logoFav2.ico">
+    <link rel="icon" type="image/x-icon" href="./img/logoFav.ico">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/button.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
-    <div class="title">
-        <a href="./index.html"><img class="img" src="img/logo.jpg"></a>
-        <a href="./delogConfirmation.html"><input class="delog" type="button" value="Deconnexion"></a>
+    <header>
+        <a href="./index.html"><img class="img" src="./img/logo.jpg"></a>
+        <a href="./confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
         <h1>Les Brakaas !</h1>
-    </div>
+    </header>
     <p>Que souhaitez-vous faire ?</p>
 
     <nav>
         <a href="./listingProduct.html "><input class="pouet" type="button" value="Gerer les produits"></a>
-        <a href="./addClient.html "><input class="pouet" type="button" value="Gerer les client"></a>
+        <a href="./displayClient.html "><input class="pouet" type="button" value="Gerer les client"></a>
         <a href="./createCommande.html "><input class="pouet" type="button" value="Créer une commande"></a>
         <a href="./stats.html "><input class="pouet" type="button" value="Afficher les statistiques"></a>
     </nav>
