Ajout du bouton de retour au login

--- a/mspr/addProduct.html
+++ b/mspr/addProduct.html
@@ -28,7 +28,7 @@
         <h1>Les Brakaas !</h1>
     </header>
 
-    <p>Création d'un client :</p>
+    <p>Ajout d'un produit :</p>
 
     <div class="formCommand">
         <form>
