--- a/mspr/confirmation/delogConf.html
+++ b/mspr/confirmation/delogConf.html
@@ -20,11 +20,12 @@
 </head>
 
 <body>
-    <div class=" title ">
+    <header>
         <a href="./../index.html "><img class="img " src="./../img/logo.jpg "></a>
+        <a href="./../login.html"><input class="delog" type="button" value="Retour Login"></a>
         <h1>Les Brakaas !</h1>
+    </header>
 
-    </div>
     <div class="confDelog ">
         <h2>Vous êtes bien déconnecté !</h2>
         <div class="bravo"><img src="./../img/bravo.gif "></div>
