--- a/mspr/confirmation/clientConf.html
+++ b/mspr/confirmation/clientConf.html
@@ -20,12 +20,12 @@
 </head>
 
 <body>
-    <div class=" title ">
+    <header>
         <a href="./../index.html "><img class="img " src="./../img/logo.jpg "></a>
         <a href="./../index.html"><input class="delog" type="button" value="Retour accueil"></a>
         <h1>Les Brakaas !</h1>
+    </header>
 
-    </div>
     <div class="confDelog ">
         <h2>Le client est bien enregistré !</h2>
         <div class="bravo"><img src="./../img/bravo.gif "></div>
