Ajout des fiches clients

--- a/mspr/show.html
+++ b/mspr/show.html
@@ -26,16 +26,20 @@
         <a href="./index.html"><input class="delog" type="button" value="Retour accueil"></a>
         <h1>Les Brakaas !</h1>
     </header>
-    <p>Liste des clients :</p>
+    <p>Fiche des clients :</p>
 
     <div class="tabContainer">
         <table class="tabDesign">
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Action</th>
+                    <th>Prénom</th>
+                    <th>Nom</th>
+                    <th>Adresse Entreprise</th>
+                    <th>Nom Entreprise</th>
+                    <th>N° Téléphone</th>
+                    <th>E-mail</th>
+                    <th>SIRET</th>
                 </tr>
             </thead>
             <tbody>
@@ -43,31 +47,15 @@
                     <td>01</td>
                     <td>Jean</td>
                     <td>Bernard</td>
-                    <td>Afficher | Modifier</td>
-                </tr>
-
-                <tr>
-                    <td>02</td>
-                    <td>Claude</td>
-                    <td>Bertrand</td>
-                    <td>Afficher | Modifier</td>
-                </tr>
-
-                <tr>
-                    <td>03</td>
-                    <td>Soizig</td>
-                    <td>Claudette</td>
-                    <td>Afficher | Modifier</td>
-                </tr>
-
-                <tr>
-                    <td>04</td>
-                    <td>Prout</td>
-                    <td>Pouet</td>
-                    <td><a href="./show.html">Afficher</a> | <a href="./addClient.html">Modifier</a></td>
+                    <td>3 rue de la pierre qui roule</td>
+                    <td>N'amasse pas mousse</td>
+                    <td>01.02.03.04.05</td>
+                    <td>cacahuete@noix.decajou</td>
+                    <td>873291JEZKFJSD93</td>
                 </tr>
             </tbody>
         </table>
-        <a href="./addClient.html"><input class="authLog" type="button" value="Ajouter un client !"></a>
+        <a href="./addClient.html"><input class="authLog" type="button" value="Modifier le client !"></a>
+        <a href="./addClient.html"><input class="authLog" type="button" value="Suprimer le client !"></a>
     </div>
 </body>
