Fix des modif clients

--- a/mspr/displayClient.html
+++ b/mspr/displayClient.html
@@ -43,21 +43,21 @@
                     <td>01</td>
                     <td>Jean</td>
                     <td>Bernard</td>
-                    <td>Afficher | Modifier</td>
+                    <td><a href="./show.html">Afficher</a> | <a href="./addClient.html">Modifier</a></td>
                 </tr>
 
                 <tr>
                     <td>02</td>
                     <td>Claude</td>
                     <td>Bertrand</td>
-                    <td>Afficher | Modifier</td>
+                    <td><a href="./show.html">Afficher</a> | <a href="./addClient.html">Modifier</a></td>
                 </tr>
 
                 <tr>
                     <td>03</td>
                     <td>Soizig</td>
                     <td>Claudette</td>
-                    <td>Afficher | Modifier</td>
+                    <td><a href="./show.html">Afficher</a> | <a href="./addClient.html">Modifier</a></td>
                 </tr>
 
                 <tr>
