--- a/mspr/show.html
+++ b/mspr/show.html
@@ -56,6 +56,6 @@
             </tbody>
         </table>
         <a href="./addClient.html"><input class="authLog" type="button" value="Modifier le client !"></a>
-        <a href="./addClient.html"><input class="authLog" type="button" value="Suprimer le client !"></a>
+        <a href="#"><input class="authLog" type="button" value="Suprimer le client !"></a>
     </div>
 </body>
