Ajout de l'historique de commande

--- a/mspr/index.html
+++ b/mspr/index.html
@@ -30,7 +30,7 @@
         <a href="./listingProduct.html "><input class="pouet" type="button" value="Gerer les produits"></a>
         <a href="./displayClient.html "><input class="pouet" type="button" value="Gerer les client"></a>
         <a href="./createCommande.html "><input class="pouet" type="button" value="Créer une commande"></a>
-        <a href="./stats.html "><input class="pouet" type="button" value="Afficher les statistiques"></a>
+        <a href="./history.html "><input class="pouet" type="button" value="Historique commandes"></a>
     </nav>
 </body>
 
