--- a/src/main/resources/static/confirmation/clientConf.html
+++ b/src/main/resources/static/confirmation/clientConf.html
@@ -21,14 +21,14 @@
 
 <body>
     <header>
-        <a href="./../index.html "><img class="img " src="./../img/logo.jpg "></a>
-        <a href="./../index.html"><input class="delog" type="button" value="Retour accueil"></a>
+        <a href="../../"><img class="img " src="./../img/logo.jpg "></a>
+        <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
         <h1>Les Brakaas !</h1>
     </header>
 
     <div class="confDelog ">
         <h2>Le client est bien enregistré !</h2>
-        <div class="bravo"><img src="./../img/bravo.gif "></div>
+        <div class="bravo"><img src="./../img/bravo.gif"></div>
     </div>
 </body>
 
